syntax = "proto3";

option csharp_namespace = "HomeScreen.Service.Media";

package media;

service Media {
  rpc RandomMedia(MediaRequest) returns (MediaResponse);

  rpc ToggleMedia(ToggleMediaRequest) returns (MediaEntry);
}

message MediaRequest {
  uint32 count = 1;
}

message ToggleMediaRequest {
  string id = 1;
  bool enabled = 2;
}

message MediaResponse {
  repeated MediaEntry items = 2;
}

message MediaEntry {
  string id = 1;
  int64 utc_datetime = 2;
  string location = 3;
  double longitude = 4;
  double latitude = 5;
  string notes = 6;
  bool enabled = 7;
}